assets/css/index.css
/***** MOBILE FIRST *****/
* {
	box-sizing: border-box;
}

body, html {
  height: 100%;
  margin: 0;
  font-family: 'Red Hat Text', sans-serif;
  color: #263238;
}

a {
  text-decoration: none;
}

.page-container {
  position: relative;
  min-height: 100vh;
}

.full-container {
  /* margin-top: 100px; */
  height: 100%;
}

.content-container {
  margin-left: 50px;
  margin-right: 50px;
  /* height: 100%; */
  padding-bottom: 100px;;
}

.intro-content-container {
  margin-left: 50px;
  margin-right: 50px;
  height: 100%;
}

/* NAV STYLES */
.overlay {
  height: 0;
  width: 100%;
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  background-color: rgb(21, 136, 103, .9);
  /* background-color: rgb(0,0,0);
  background-color: rgba(0,0,0, 0.9); */
  overflow-y: hidden;
  transition: 0.5s;
}

.overlay-content {
  position: relative;
  top: 25%;
  width: 100%;
  text-align: center;
  margin-top: 30px;
  font-family: 'Roboto', sans-serif;

  display: flex;
  justify-content: center;
}

.nav-left {
  display: flex;
  flex-direction: column;
  align-items: flex-start;

}

.nav-line {
  height: 250px;
  border-left: 1px solid white;
  margin: 0 50px;
}

.nav-right {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.nav-logos {
  display: flex;
  margin-top: 50px;
}

.overlay a {
  padding: 8px;
  text-decoration: none;
  font-size: 36px;
  /* color: #818181; */
  color: #f1f1f1;
  display: block;
  transition: 0.3s;
}

.overlay .nav-right a {
  font-size: 28px;
}

.overlay a:hover, .overlay a:focus {
  color: #135889;
}

.overlay .closebtn {
  position: absolute;
  top: 0;
  right: 20px;
  font-size: 60px;
}

@media screen and (max-height: 450px) {
  .overlay a {font-size: 20px}
  .overlay .closebtn {
  font-size: 40px;
  top: 15px;
  right: 35px;
  }
}

/* HEADER STYLES */
.header {
  /* background-image: url("../img/Rectangle.jpeg"); */
  background-color: #135889;
  /* height: 800px;  */

  /* Center and scale the image nicely */
  /* background-position: center;
  background-repeat: no-repeat;
  background-size: cover; */

  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.header-logo {
  margin: 20px;
  width: 200px;
}

.header-logo img {
  width: 100%;
}

.header-menu {
  margin: 0 20px;
  width: 30px;
}

.header-menu:hover {
  cursor: pointer;
}

.header-menu img {
  width: 100%;
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 100px;

  background-image: url("../img/Rectangle.jpeg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  text-align: center;

  display: flex;
  justify-content: space-between;
  align-items: flex-end;

  padding: 0px 50px 10px 50px;
}

.footer p {
  padding: 10px 20px;
}

.footer-logos {
  padding: 10px 20px;
  display: flex;
  justify-content: center;
  /* align-items: center; */
}

.footer-logos div {
  margin: 5px;
}

/* INTRO STYLES */
.intro-container {
  /* background-image: url("../img/Rectangle.jpeg"); */
  background-color: #135889;
  height: 600px; 

  /* Center and scale the image nicely */
  /* background-position: center;
  background-repeat: no-repeat;
  background-size: cover; */
}

.intro-content {
  display: flex;
  flex-direction: column;
  width: 100%;
  height: 100%;
  justify-content: center;
}

.intro-statement {
  font-size: 36px;
  color: white;
  margin-bottom: 50px;
}

.intro-buttons {
  display: flex;
}

.arrow-container {
  text-align: center;
}

/* BUTTONS */
.button {
  color: white;
  border: white solid 2px;
  padding: 10px;
  font-size: 16px;
}

.learn-more-button {
  margin-right: 30px;
}

.learn-more-button:hover {
  background-color: #f1f1f1;
  color: #135889;
}

.join-movement-button:hover {
  background-color: #f1f1f1;
  color: #135889;
}

.view-all-button {
  color: black;
  border: black solid 2px;
  width: fit-content;
  margin: 100px auto;
}

.view-all-button:hover {
  background-color: black;
  color: #f1f1f1;
}

/* SECTION */
.section-container {
  width: 100%;
  margin: 50px 0;
}

.section-header {
  font-size: 24px;
}

.section-content {
  font-size: 16px;
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
}

/* LOGO GALLERY */
.logo-container {
  width: 100%;
}

.row {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  width: 100%;
  height: 100%;
  justify-content: center;
}

.column, .column-press {
  padding: 5px;
  margin-right: 50px;
  width: 100%;
  margin-top: 50px;
  text-align: center;
}

.column-press {
  margin: 30px;
}

.column img, .column-press img {
  width: 75%;
}

/* COMMUNITY TABLE */
table {
  width: 100%;
}

tbody {
  width: 100%;
}

tr {
  width: 100%;
  display: flex;
  align-items: center;
  padding: 15px;
  font-family: 'Roboto', sans-serif;
}

tr:not(:last-child) {
  border-bottom: lightgray solid 1px;
}

td {
  padding: 10px;
  /* width: 33.33%; */
}

.community-source {
  font-weight: bold;
  width: 25%;
}

.community-article {
  width: 50%;
}

.community-article a {
  text-decoration: inherit;
  color: #135889;
}

.community-date {
  font-style: italic;
  width: 25%;
  text-align: end;
}

/******** FOR MID SCREEN *********/
@media only screen and (min-width: 768px) {
  .intro-content {
    width: 66.67%;
  }

  .intro-statement {
    font-size: 48px;
    margin-bottom: 50px;
  }

  .column, .column-press {
    width: 40%;
  }
}

/***** FOR FULL SCREEN *****/
@media only screen and (min-width: 996px) {
  .full-container {
    margin-top: 80px;
    height: 100%;
  }

  .content-container {
    margin-left: 150px;
    margin-right: 150px;
  }

  .intro-content-container {
    margin-left: 150px;
    margin-right: 150px;
  }

  /* .intro-container {
    padding-top: 120px;
  } */

  .intro-container {
    height: 800px;
  }

  .intro-content {
    width: 66.67%;
  }

  .intro-statement {
    font-size: 64px;
    margin-bottom: 80px;
  }

  .button {
    border: white solid 3px;
    padding: 10px;
    font-size: 24px;
  }

  .view-all-button {
    color: black;
    border: black solid 3px;
  }

  /* SECTION */
  .section-container {
    margin: 150px 0;
  }

  .section-header {
    font-size: 36px;
  }

  .section-content {
    font-size: 24px;
  }

  .column {
    width: 20%;
  }

  .column-press {
    width: 25%;
  }

}

